--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/joy": "^5.0.0-alpha.69",
     "@mui/material": "^5.11.11",
     "@mui/styled-engine-sc": "^5.11.11",
+    "@mui/system": "^5.11.12",
     "@mui/utils": "^5.11.11",
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
@@ -26,10 +27,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-material-ui-carousel": "^3.4.2",
+    "react-swipeable": "^7.0.0",
+    "react-swipeable-views-utils": "^0.14.0",
     "styled-components": "^5.3.8",
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@types/react-swipeable-views-utils": "^0.13.4",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
